<resources>
    <string name="app_name">Harvest Operator</string>
    <string name="create_an_account">create an account</string>
    <string name="or">or</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="sign_in">sign in</string>
    <string name="skip">skip</string>
    <string name="signup">signup</string>
    <string name="owner_or_driver_operator">Owner or Driver/Operator</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="heavy_lic_number">Heavy Lic Number</string>
    <string name="forgot_password">forgot password?</string>
    <string name="send_otp">send otp</string>
    <string name="new_to_operator">new to operator?</string>
    <string name="ready">ready</string>
    <string name="hold">hold</string>
    <string name="sign_in_time_00_00_am">sign in time : 00:00 AM</string>
    <string name="username">username</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="area">area</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="service_type">service type</string>
    <string name="location">location</string>
    <string name="belt_type">belt type</string>
    <string name="tot_type">tot type</string>
    <string name="combine_type">combine type</string>
    <string name="home">home</string>
    <string name="booking">Booking</string>
    <string name="profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">status</string>
    <string name="machine_details">machine details</string>
    <string name="dashboard">dashboard</string>
    <string name="no_of_services">No. of Services</string>
    <string name="total_online_time_00_00">total online time : 00:00</string>
    <string name="total_service_time_00_00">total service time : 00:00</string>
    <string name="_0_years_experience">0 years experience</string>
    <string name="_0000_total_trips">0000 total trips</string>
    <string name="rat">0.0</string>
    <string name="stars">stars</string>
    <string name="ratings">ratings</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="address">address</string>
    <string name="machine_type">machine type</string>
    <string name="machine_number">Machine Number</string>
    <string name="machine_condition">machine condition</string>
    <string name="excellent">excellent</string>
    <string name="add_machine">Add Machine</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="update">update</string>
    <string name="no_machines">No Machines</string>
    <string name="confirmation_statement_with_order_number">Confirmation statement with Order Number</string>
    <string name="item">Item</string>
    <string name="date_time">date/time</string>
    <string name="status_of_service">Status of Service</string>
    <string name="conform">conform</string>
    <string name="decline">Decline</string>
    <string name="time_of_service">Time of Service</string>
    <string name="_00hrs_00mins">00Hrs : 00Mins</string>
    <string name="service_date_time">Service Date/Time</string>
    <string name="started_time">Started Time</string>
    <string name="arrived_time">Arrived Time</string>
    <string name="mapview">MapView</string>
    <string name="ok">OK</string>
    <string name="order_service_number">Order/Service Number</string>
    <string name="service_name">Service Name</string>
</resources>